Archivo de información incluido

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 				<h1>Registrate!</h1>
 
 				<div>
-					<input type="text" value="http://127.0.0.1" id="idtxt_servidor" name="servidor" value="Servidor"/>
+					<input type="text" value="http://guessmynumber.jurgens.com.ar" id="idtxt_servidor" name="servidor" value="Servidor"/>
 				</div>
 				<div>
-					<input type="text" value="9999" maxlength="4" id="idtxt_puerto" name="puerto" value="Puerto"/>
+					<input type="text" value="80" maxlength="4" id="idtxt_puerto" name="puerto" value="Puerto"/>
 				</div>
 				<div>
 					<input type="text" maxlength="20" id="idtxt_nombre" name="nombre" value="Nombre"/>
