Cambio del título

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es-ES">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>guessmynumber!</title>
+		<title>guessmynumberclient!</title>
 		<link rel="stylesheet" type="text/css" href="shared/estilos/css/estilos.css"/>
 		<script type="text/javascript" src="shared/javascript/principal.js"></script>
 		<script type="text/javascript" src="shared/javascript/datos.js"></script>
